# xfin

./: .gitignore  README.md  main.py  pyproject.toml
data/raw/: MBANK.mst  MILLENNIUM.mst  SWIG80.mst  WIG-BANKI.mst  WIG-POLAND.mst  WIG.mst  WIG20.mst
notebooks/: useful_commands.md
scripts/: load_bars.py
src/fin_forecast/: cli.py  logging_config.py
src/fin_forecast/core/: pipeline.py
src/fin_forecast/domain/: models.py  types.py
src/fin_forecast/features/: builder.py
src/fin_forecast/io/: parsers.py  repository.py  sources.py
src/xfin/: config.py  logging_config.py
src/xfin/data_engine/: cli.py  config.py  logging_config.py
src/xfin/data_engine/core/: pipeline.py
src/xfin/data_engine/features/: builder.py
src/xfin/data_engine/io/: parsers.py  repository.py  sources.py  types.py
src/xfin/forecaster/: cli.py  dataset.py  diagnostics.py  registry.py  runner.py
src/xfin/forecaster/models/: base.py  naive.py
tests/: test_async.py  test_builder.py  test_enums.py  test_forecaster_dataset.py  test_forecaster_registry.py  test_forecaster_runner.py  test_integration_local_raw.py  test_logger.py  test_parser.py  test_pipeline.py  test_repository.py  test_smoke.py
