[project]
name = "xfin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "hatchling>=1.28.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xfin"]

[project.scripts]
xfin-data = "xfin.data_engine.cli:main"
